* Removed atkconfigtools.inc:
  * attrib_restrict() is now atkConfig::attribRestrict()
  * grant() is now atkConfig::grant()
  * removed language() as it was not used
  * auth_pop3_response is now atkConfig::addPop3Response()
  * user() is now atkConfig::addUser(). [Ivo]
* Moved obligatory asterisk from HTML attribute to label and removed colon
  from default editform template. [Boy]
- atkTextAttribute::value2db no longer does addslashes in Oracle 9/10. [Ivo]
- atkTextAttribute::db2value no longer does stripslashes on db data. [Ivo]
- Removed fallback of all modules for atkLanguage. [Boy]
- Removed $g_layout. The (deprecated) global $g_layout object is no longer
  present. Use atkimport("atk.layout"); $layout = layout::getInstance()
  instead. Note though, that the layout class is still deprecated and should
  not be used. [Ivo]
- Removed $g_db. Db connections should be retrieved using &atkGetDb() or
  &atkDb::getInstance(). [Ivo]

Changes in ATK 5.2.1
--------------------
+ When using the browser's cache outputflush() doesn't sent the page body
  anymore. [Martin]
+ Made PHP session cache limiter and cache expire configurable. [Martin]
+ Added preliminary CSV export handler (NF_EXPORT). [Ivo]
+ Added additional http/1.1 304 not modified header. Document lastmodified
  timestamp is compared to the client's if-modified-since header. [Martin]
+ atkAggregatedColumn::display() now supports $mode param. [Ivo]
+ Added Oracle demo installation file to the demo. [Ivo]
* Changed the addMlCondition so that is uses ATK_VARS["lng"] instead of a 
  global value $lng which isn't always set. [MartinL]
* Adding a multilanguage condition now takes into concideration the current
  language. Not just the default language. [MartinL]
* Fixed bug in multi-select search of atkManyToOneRelation. [Ivo]
* Missing db error translations no longer cause fatal error message. [Ivo]
* Fixed bug and cleaned up code in atkOneToManyRelation searching. [Ivo]