@@ -168,6 +168,8 @@ Changes in ATK 5.3
   * user() is now atkConfig::addUser(). [Ivo]
 * Moved obligatory asterisk from HTML attribute to label and removed colon
   from default editform template. [Boy]
+* PASS is no longer stored in session unless $config_enable_ssl_encryption 
+  is turned on [Boy]
 - atkTextAttribute::value2db no longer does addslashes in Oracle 9/10. [Ivo]
 - atkTextAttribute::db2value no longer does stripslashes on db data. [Ivo]
 - Removed fallback of all modules for atkLanguage. [Boy]
